--- a/src/components/SearchResult/SearchResult.css
+++ b/src/components/SearchResult/SearchResult.css
@@ -8,7 +8,39 @@
 }
 
 .result-field{
+  display: flex;
+  justify-content: center;
+  align-items: start;
   border: 1px solid rgb(0, 0, 0);
   width: 90%;
   height: 100%;
+}
+
+.result{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.result-name{
+  font-size: 1.5rem;
+}
+
+.abilities{
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.ability{
+  border: 0.1rem solid rgb(10, 10, 10);
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+
+.ability-name{
+  font-size: 1.2rem;
+  font-weight: bold;
 }
